force-app/main/default/objects/cgcloud__Trip_List_Account__c/cgcloud__Trip_List_Account__c.object-meta.xml
<CustomObject>
    <description>Contains data of Trip List Customers</description>
    <label>Trip List Customer</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Trip List Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trip List Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>