force-app/main/default/objects/cgcloud__Trip_List_Account__c/fields/cgcloud__Account__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the customer.</description>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Trip_List_Accounts</relationshipLabel>
    <relationshipName>Trip_List_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>