force-app/main/default/objects/cgcloud__Trip_List_Account__c/fields/cgcloud__City__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__City__c</fullName>
    <formula>cgcloud__Account__r.ShippingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City</label>
    <type>Text</type>
</CustomField>