force-app/main/default/objects/cgcloud__Trip_List_Account__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <defaultValue>000</defaultValue>
    <description>Specifies the position of the customer in the trip list.</description>
    <label>Sort</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>