force-app/main/default/objects/cgcloud__Trip_List_Account__c/fields/cgcloud__Street__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Street__c</fullName>
    <description>Customer&apos;s street.</description>
    <formula>cgcloud__Account__r.ShippingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street</label>
    <type>Text</type>
</CustomField>