force-app/main/default/objects/cgcloud__Trip_List_Account__c/fields/cgcloud__Trip_List__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Trip_List__c</fullName>
    <description>Reference to trip list</description>
    <label>Trip List</label>
    <referenceTo>cgcloud__Trip_List__c</referenceTo>
    <relationshipLabel>Trip List Customers</relationshipLabel>
    <relationshipName>Trip_List_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>