force-app/main/default/objects/cgcloud__Trip_List_Account__c/fields/cgcloud__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_From__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>From this date on the entry is valid</description>
    <label>Valid From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>