force-app/main/default/objects/cgcloud__Trip_List_Account__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <defaultValue>DATE(2099,12,31)</defaultValue>
    <description>Until this date the entry is valid</description>
    <label>Valid Thru</label>
    <required>true</required>
    <type>Date</type>
</CustomField>