force-app/main/default/objects/cgcloud__Trip_List_Account__c/validationRules/cgcloud__Account_Not_Empty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Account_Not_Empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(cgcloud__Account__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__Account__c</errorDisplayField>
    <errorMessage>The Customer can&apos;t be empty.</errorMessage>
</ValidationRule>